# sudoku

./: README.md  extract_puzzles.py  pyproject.toml  requirements.txt
puzzle/: puzzle.py
sudoku_grid_extractor/: __init__.py  api.py  cell_recognizer.py  digit_model.pth  digit_model.py  exceptions.py  folder_manager.py  grid_detector.py  grid_validator.py  image_loader.py  models.py  output_store.py  sudoku_validator.py  train_digit_model.py
tests/image_extractor/: test_api.py  test_cell_recognizer.py  test_cell_recognizer_properties.py  test_folder_manager.py  test_folder_manager_properties.py  test_grid_detector.py  test_image_loader.py  test_image_loader_properties.py  test_output_store.py  test_output_store_properties.py
tests/validator/: test_grid_validator.py  test_grid_validator_properties.py
